# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc_portal"
version = "0.1.0"
authors = [
  { name = "Ashay Gawali", email = "gawali.ashay@gmail.com" }
]
description = "Project on Document Portal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
  "python-dotenv",
  "langchain",
  "ipykernel",
  "langchain-groq",
  "langchain-openai"
]

keywords = ["llm", "genai", "langchain", "document-processing"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/AshayGawali/doc_portal"
issues = "https://github.com/AshayGawali/doc_portal/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*"]
